# metera-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.browser-e2e  Makefile  README.md  README_PRODUCTION.md  SECURITY.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  railway.json
app/: main.py
config/: detectors.example.yaml
dashboard/: app.py
deploy/: Caddyfile  docker-compose.cheapest.yml
docs/: BETA_COMMERCIAL_POLICY_DECISIONS.md  BETA_CUSTOMER_QUICKSTART.md  BETA_MASTER_MAP.md  BETA_MODULE_COMPLETION_SUMMARY_2026-04-25.md  BETA_OPERATOR_CLEANLINESS_VALIDATION_2026-04-25.md  BETA_PRODUCT_CONTRACT.md  BETA_TENANT_AUTH_MODEL.md  BETA_TENANT_ONBOARDING_RUNBOOK.md  CHEAPEST_DEPLOYMENT_RUNBOOK.md  CLOUD_PROOF_CHECKLIST.md  CURRENT_STATE.md  DEPLOYMENT_READINESS_PLAN.md  DOCS_CANONICAL_MAP.md  ENGINEER_ONBOARDING.md  H2_CLOUD_DEPLOYMENT_ROADMAP.md  H2_SESSION_HANDOFF_2026-04-27.md  H3_AGENT_HANDOFF_2026-04-28.md  H3_SESSION_HANDOFF_2026-04-28_MULTI_TENANT_SOAK.md  HANDOFF.md  MOD_BETA_RELIABILITY.md  MOD_COMMERCIAL_POLICY.md  MOD_OPERATOR_CLEANLINESS.md  PHASE_2_HARDENING_PLAN.md  PRODUCT_SUITES_USP.md  START_HERE.md  WEBSITE_DEPLOYMENT_GETMETERA.md
scripts/: bootstrap_cheap_vps.sh  bootstrap_policy_store.py  debug_tenant_dev_counts.py  demo_semantic_hit.py  mock_upstream.py  package_browser_extension.py  probe_shadow_branch.py  run_500_prompt_corpus.py  run_browser_extension_dom_canary.py  run_h2_cloud_proof.py  run_h2_cloud_proof_api.py  run_h3_commercial_recovery_proof.py  run_h3_multi_tenant_correctness.py  run_identity_nightmare_only.py  (+10 more)
(+182 files in other folders)
