[project]
name = "metera"
version = "0.1.0"
description = "Security-first local middleware proxy for AI cost observability and semantic caching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "prometheus-client>=0.20.0",
  "redis>=5.0.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "pip-audit>=2.8.0",
]
security = [
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
]
semantic = [
  "sentence-transformers>=3.0.0",
  "asyncpg>=0.30.0",
]
ui = [
  "streamlit>=1.44.0",
  "pandas>=2.2.0",
  "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["config", "config.*", "tests", "tests.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
